# w3av

./: .gitignore  LICENSE.md  README.md  pyproject.toml
docs/: README.md  inspect.md  query.md  strings.md  tree.md  urls.md
sawari/: __init__.py  sawari.py
sawari/config/: iana_mimetypes.txt
sawari/core/: argparser.py  html.py  url_utils.py
sawari/modes/: inspect.py  strings.py  tree.py
sawari/modes/urls/: __init__.py  config.py  extractor.py  filters.py  processors.py  symbols.py  traversal.py
tests/: test_argparser.py  test_comment.py  test_context.py  test_html.py  test_html_file_input.py  test_inspect.py  test_jsparser.py  test_output.py  test_query.py  test_strings.py  test_tree.py  test_urls.py  test_urls_cleanup.py  test_urls_edge_cases.py  test_urls_features.py  test_urls_filtering.py  test_urls_html.py  test_urls_junk_patterns.py  test_urls_methods.py  test_urls_objects.py
tests/fixtures/html/: citation_elements.js  data_attributes.js  empty_strings.js  fragments.js  full_page.js  inline_script.js  malformed.js  mixed_quotes.js  mixed_scripts.js  multiple_tags.js  nested_html_structures.js  nested_structures.js  object_embed.js  simple_anchor.js  skip_protocols.js  srcset.js  template_full_page.js  template_string.js
tests/fixtures/urls/: adjacent_placeholders.js  array_join.js  binary_expressions.js  chained_concat.js  comments.js  custom_extensions.js  edge_cases.js  escape_sequences.js  junk_filtering.js  member_expressions.js  object_properties.js  replace_method.js  route_params.js  simple_strings.js  skip_symbols_basic.js  skip_symbols_objects.js  skip_symbols_simple.js  skip_symbols_template.js  subscript_expressions.js  template_strings.js  variable_reassignment.js  window_location.js
w3av/: w3av.py
w3av/config/: file-extensions.txt  file_extensions.txt  nodetypes.txt
w3av/core/: argparser.py  context.py  html.py  jsparser.py  url_utils.py
w3av/modes/: inspect.py  strings.py  tree.py  urls.py
w3av/modes/urls/: __init__.py  aliases.py  config.py  extractor.py  filters.py  output.py  processors.py  resolvers.py  symbols.py  traversal.py
weav/: weav.py
weav/config/: file-extensions.txt  mimetypes.txt
weav/core/: argparser.py  comment.py  html.py  jsparser.py  output.py  url_utils.py
weav/modes/: inspect.py  query.py  strings.py  tree.py  urls.py
