[tool.poetry]
name = "weav"
version = "0.1.7"
description = "extract URLs, strings, and more from JavaScript code"
authors = ["Shuaib Oladigbolu <shuaib@footstep.ninja>"]
license = "AGPL-3.0-only"
readme = "README.md"
include = [
	"weav/config/nodetypes.txt",
	"weav/config/mimetypes.txt"
]

[tool.poetry.dependencies]
python = "^3.11"
tree-sitter = "^0.25.2"
tree-sitter-javascript = "^0.25.0"
beautifulsoup4 = "^4.14.3"
lxml = "^5.3.0"
html5lib = "^1.1"
html5-parser = "^0.4.12"

[tool.poetry.scripts]
weav = "weav.weav:main"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
