[tool.poetry]
name = "w3av"
version = "1.0.2"
description = "extract URLs, strings, and more from JavaScript code"
authors = ["Shuaib Oladigbolu <shuaib@footstep.ninja>"]
license = "MIT"
readme = "README.md"
include = [
	"w3av/config/nodetypes.txt",
	"w3av/config/mimetypes.txt",
	"w3av/config/iana-mimetypes.txt",
	"w3av/config/file-extensions.txt"
]

[tool.poetry.dependencies]
python = "^3.11"
tree-sitter = "^0.25.2"
tree-sitter-javascript = "^0.25.0"
beautifulsoup4 = "^4.14.3"
lxml = "^5.3.0"
html5lib = "^1.1"
html5-parser = "^0.4.12"

[tool.poetry.scripts]
w3av = "w3av.w3av:main"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
